<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="notification_ticker">Navit started</string>
    <string name="notification_event_default">Navit running</string>
    <string name="initial_info_box_title">Welcome to Navit</string>
    <string name="initial_info_box_message">Thank you for installing Navit!\n\nTo start, select \"Download maps\" from the menu to download a map. Note: The map filesize may be large (>50MB) - a wifi connection is recommended.\n\nMapdata: (c) OpenStreetMap contributors\n\nEnjoy Navit!</string>
    <string name="initial_info_box_OK">OK</string>
    <string name="initial_info_box_more_info">More info</string>
    <string name="optionsmenu_zoom_in">Zoom in</string>
    <string name="optionsmenu_zoom_out">Zoom out</string>
    <string name="optionsmenu_download_maps">Download maps</string>
    <string name="optionsmenu_toggle_poi">Toggle POIs</string>
    <string name="optionsmenu_exit_navit">Exit Navit</string>
    <string name="optionsmenu_backup_restore">Backup / Restore</string>
    <string name="settings">settings</string>
    <string name="action_zoom_to_route">zoom to route</string>
    <string name="action_stop_navigation">stop navigation</string>
    <string name="optionsmenu_set_maplocation">set map location</string>
    <string name="action_toggle_layout">toggle day/night layout</string>
    <string name="action_enable_auto_layout">enable auto day/night layout</string>
    <string name="action_mapTileActivity">mapTileActivity</string>
    <string name="position_popup_title">Position</string>
    <string name="position_popup_drive_here">Route to here</string>
    <string name="map_delete">Delete this map?</string>
    <string name="map_download_title">Map download</string>
    <string name="map_download_downloading">Downloading:</string>
    <string name="map_download_eta">ETA</string>
    <string name="map_download_ready">ready</string>
    <string name="map_download_download_error">Error downloading map.</string>
    <string name="map_download_download_aborted">Map download aborted</string>
    <string name="map_download_not_enough_free_space">Not enough free space</string>
    <string name="map_download_oversize">Sorry, we currently do not support maps above 3.8G on Android, please select a smaller one.</string>
    <string name="map_no_fix">No location. Reopen after location fix.</string>
    <string name="maps_for_current_location">Maps containing current location</string>
    <string name="maps_installed">Installed maps</string>
    <string name="map_downloading">downloading</string>
    <string name="map_download_medium_unavailable">Media selected for map storage is not available</string>
    <string name="map_download_error_writing_map">Error writing map!</string>
    <string name="map_location_changed">New location set to %s Restart Navit to apply the changes.</string>
    <string name="map_location_unavailable">Current map location %s is not available Please restart Navit after you attach an SD card or select a different map location.</string>
    <string name="address_search_title">Address search</string>
    <string name="address_enter_destination">Enter destination</string>
    <string name="address_partial_match">Match partial address</string>
    <string name="address_search_button">Search</string>
    <string name="address_search_searching">Searching...</string>
    <string name="address_search_not_found">Address not found</string>
    <string name="address_search_getting_results">Getting search results</string>
    <string name="address_search_loading_results">Loading search results</string>
    <string name="address_search_no_results">No results found</string>
    <string name="address_search_no_text_entered">No text entered</string>
    <string name="address_search_set_destination">Setting destination to:</string>
    <string name="address_search_towns">Towns</string>
    <string name="address_search_streets">Streets</string>
    <string name="choose_an_action">Choose an action</string>
    <string name="please_insert_an_sd_card">Please insert an SD Card</string>
    <string name="backing_up">Backing up...</string>
    <string name="restoring">Restoring...</string>
    <string name="failed_to_create_backup_directory">Failed to create backup directory</string>
    <string name="backup_failed">Backup failed</string>
    <string name="no_backup_found">No backup found</string>
    <string name="failed_to_restore">Failed to restore</string>
    <string name="backup_successful">Backup successful</string>
    <string name="restore_successful_please_restart_navit">Restore Successful\nPlease restart Navit</string>
    <string name="backup_not_found">Backup not found</string>
    <string name="restore_failed">Restore failed</string>
    <string name="select_backup">Select backup</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="TTS_title_data_missing">System text to speech engine data is missing</string>
    <string name="TTS_qery_install_data">Navit can use any text to speech engine installed on your device. The currently selected engine reports it is unable to speak in your language. Should we ask the system to show voice download dialog?</string>
    <string name="optionsmenu_search">search</string>
    <string name="permissions_not_granted">Navit needs permission to access GPS and read the map.\nIf you change your mind please restart Navit and grant the permissions</string>
    <string name="permissions_info_box_title">One or more ungranted permissions</string>
    <string name="whole_planet">Whole Planet</string>
    <string name="africa">Africa</string>
    <string name="angola">Angola</string>
    <string name="burundi">Burundi</string>
    <string name="canary_islands">Canary Islands</string>
    <string name="congo">Congo, Democratic Republic of the</string>
    <string name="ethiopia">Ethiopia</string>
    <string name="guinea">Guinea</string>
    <string name="cotedivoire">Cote d\'Ivoire</string>
    <string name="kenya">Kenya</string>
    <string name="lesotho">Lesotho</string>
    <string name="liberia">Liberia</string>
    <string name="libya">Libya</string>
    <string name="madagascar">Madagascar</string>
    <string name="namibia">Namibia</string>
    <string name="botswana">Botswana</string>
    <string name="reunion">Reunion</string>
    <string name="rwanda">Rwanda</string>
    <string name="south_africa">South Africa</string>
    <string name="tanzania">Tanzania, United Republic of</string>
    <string name="uganda">Uganda</string>
    <string name="asia">Asia</string>
    <string name="azerbaijan">Azerbaijan</string>
    <string name="china">China</string>
    <string name="cyprus">Cyprus</string>
    <string name="india">India</string>
    <string name="nepal">Nepal</string>
    <string name="indonesia">Indonesia</string>
    <string name="iran">Iran, Islamic Republic of</string>
    <string name="iraq">Iraq</string>
    <string name="israel">Israel</string>
    <string name="japan">Japan</string>
    <string name="kazakhstan">Kazakhstan</string>
    <string name="kyrgyzsyan">Kyrgyzstan</string>
    <string name="malaysia">Malaysia</string>
    <string name="mongolia">Mongolia</string>
    <string name="pakistan">Pakistan</string>
    <string name="philippines">Philippines</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="taiwan">Taiwan</string>
    <string name="korea">Korea</string>
    <string name="singapore">Singapore</string>
    <string name="thailand">Thailand</string>
    <string name="turkey">Turkey</string>
    <string name="turkmenistan">Turkmenistan</string>
    <string name="uae_other">UAE+Other</string>
    <string name="australia">Australia</string>
    <string name="oceania">Oceania</string>
    <string name="tasmania">Tasmania</string>
    <string name="victoria">Victoria</string>
    <string name="new_south_wales">New South Wales</string>
    <string name="new_caledonia">New Caledonia</string>
    <string name="newzealand">New Zealand</string>
    <string name="europe">Europe</string>
    <string name="western_europe">Western Europe</string>
    <string name="austria">Austria</string>
    <string name="azores">Azores</string>
    <string name="belgium">Belgium</string>
    <string name="benelux">BeNeLux</string>
    <string name="netherlands">Netherlands</string>
    <string name="denmark">Denmark</string>
    <string name="faroe_islands">Faroe Islands</string>
    <string name="france">France</string>
    <string name="alsace">Alsace</string>
    <string name="aquitaine">Aquitaine</string>
    <string name="auvergne">Auvergne</string>
    <string name="centre">Centre</string>
    <string name="bretagne">Bretagne</string>
    <string name="bourgogne">Bourgogne</string>
    <string name="basse_normandie">Basse-Normandie</string>
    <string name="champagne_ardenne">Champagne-Ardenne</string>
    <string name="corse">Corse</string>
    <string name="franche_comte">Franche-Comte</string>
    <string name="haute_normandie">Haute-Normandie</string>
    <string name="ile_de_france">Ile-de-France</string>
    <string name="languedoc_roussillon">Languedoc-Roussillon</string>
    <string name="limousin">Limousin</string>
    <string name="lorraine">Lorraine</string>
    <string name="midi_pyrenees">Midi-Pyrenees</string>
    <string name="nord_pas_de_calais">Nord-pas-de-Calais</string>
    <string name="pays_de_la_loire">Pays-de-la-Loire</string>
    <string name="picardie">Picardie</string>
    <string name="poitou_charentes">Poitou-Charentes</string>
    <string name="provence_alpes_cote_d_azur">Provence-Alpes-Cote-d-Azur</string>
    <string name="rhone_alpes">Rhone-Alpes</string>
    <string name="luxembourg">Luxembourg</string>
    <string name="germany">Germany</string>
    <string name="baden_wuerttemberg">Baden-Wuerttemberg</string>
    <string name="bayern">Bayern</string>
    <string name="mittelfranken">Mittelfranken</string>
    <string name="niederbayern">Niederbayern</string>
    <string name="oberbayern">Oberbayern</string>
    <string name="oberfranken">Oberfranken</string>
    <string name="oberpfalz">Oberpfalz</string>
    <string name="schwaben">Schwaben</string>
    <string name="unterfranken">Unterfranken</string>
    <string name="berlin">Berlin</string>
    <string name="brandenburg">Brandenburg</string>
    <string name="bremen">Bremen</string>
    <string name="hamburg">Hamburg</string>
    <string name="hessen">Hessen</string>
    <string name="mecklenburg_vorpommern">Mecklenburg-Vorpommern</string>
    <string name="niedersachsen">Niedersachsen</string>
    <string name="nordrhein_westfalen">Nordrhein-westfalen</string>
    <string name="rheinland_pfalz">Rheinland-Pfalz</string>
    <string name="saarland">Saarland</string>
    <string name="sachsen_anhalt">Sachsen-Anhalt</string>
    <string name="sachsen">Sachsen</string>
    <string name="schleswig_holstein">Schleswig-Holstein</string>
    <string name="thueringen">Thueringen</string>
    <string name="iceland">Iceland</string>
    <string name="ireland">Ireland</string>
    <string name="italy">Italy</string>
    <string name="portugal">Portugal</string>
    <string name="spain">Spain</string>
    <string name="mallorca">Mallorca</string>
    <string name="galicia">Galicia</string>
    <string name="scandinavia">Scandinavia</string>
    <string name="finland">Finland</string>
    <string name="switzerland">Switzerland</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="england">England</string>
    <string name="buckinghamshire">Buckinghamshire</string>
    <string name="cambridgeshire">Cambridgeshire</string>
    <string name="cumbria">Cumbria</string>
    <string name="east_yorkshire_with_hull">East yorkshire with hull</string>
    <string name="essex">Essex</string>
</resources>